# meta-signal-lojix

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  build.rs  skills.md
schema/: lib.schema
src/schema/: lib.rs
tests/: dependency_boundary.rs  frame.rs  round_trip.rs
triad-port/: Cargo.toml  build.rs
triad-port/schema/: lib.schema
triad-port/src/: lib.rs
triad-port/src/schema/: lib.rs
