[package]
name         = "meta-signal-lojix"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
description  = "Meta Signal contract for the lojix deploy orchestrator owner-only policy surface."
publish      = false
links        = "meta-signal-lojix"
build        = "build.rs"

[lib]
name = "meta_signal_lojix"
path = "src/lib.rs"

[features]
default   = []
nota-text = ["dep:nota-next"]

[dependencies]
nota-codec   = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
nota-next    = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-lojix = { path = "../../signal-lojix/triad-port" }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
